--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
   --black: #1a1a1a;
   --grey: #f4f4f4;
   --white: #fff;
-  --red: red;
+  --red: #be1725;
 }
 
 body {
@@ -115,10 +115,24 @@ h4 {
   font-size: 0.8em;
 }
 
+.btn-white{
+  color: var(--red);
+  background-color: var(--white);
+  padding: 12px;
+  text-transform: uppercase;
+  border: 2px solid var(--white);
+  transition: all 0.25s;
+}
+
+.btn-white:hover{
+  background-color: transparent;
+  color: var(--white);
+}
+
 /*Navbar Lang*/
 .navbar-lang{
   text-transform: uppercase;
-  background-color: var(--grey);
+  border-bottom: 1px solid var(--grey);
   padding: 10px 0;
 }
 
@@ -140,12 +154,14 @@ nav{
   padding: 20px 0;
   position: fixed;
   width: 100%;
+  z-index: 99;
+  background-color: var(--white);
 }
 
 .content-navbar{
   margin: 0 -20px;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -190,6 +206,7 @@ nav{
   width: 100%;
   display: none;
   z-index: 99;
+  background-color: var(--white);
 }
 
 .sub-nav a{
@@ -215,3 +232,29 @@ nav{
 .menu-navbar li:hover .sub-nav{
   display: block;
 }
+
+/*Top Banner*/
+.top-banner{
+  background-color: var(--red);
+  color: var(--white);
+  padding: 25px 0;
+  margin-top: 80px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+
+.top-banner h2{
+  margin-bottom: 25px;
+}
+
+.content-buttons{
+  display: flex;
+  justify-content: center;
+}
+
+.content-buttons .btn-white:first-child{
+  margin-right: 50px;
+}
+
+/*Banner Home*/
