--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,11 +79,15 @@ div {
 }
 
 .container {
-    max-width: 1500px;
+    max-width: 1400px;
     margin: 0 auto;
     padding-right: 20px;
     padding-left: 20px;
     position: relative;
+}
+
+.w85{
+    width: 85%;
 }
 
 .w80 {
@@ -102,8 +106,16 @@ div {
     width: 60%;
 }
 
+.w55 {
+    width: 55%;
+}
+
 .w50 {
     width: 50%;
+}
+
+.w45 {
+    width: 45%;
 }
 
 .w40 {
@@ -120,6 +132,10 @@ div {
 
 .w20 {
     width: 20%;
+}
+
+.w15{
+    width: 15%;
 }
 
 .fcontent {
@@ -149,7 +165,7 @@ div {
     color: var(--white);
 }
 
-.btn-black{
+.btn-black {
     color: var(--white);
     background-color: var(--black);
     padding: 12px;
@@ -158,7 +174,7 @@ div {
     transition: all 0.25s;
 }
 
-.btn-black:hover{
+.btn-black:hover {
     background-color: transparent;
     color: var(--black);
 }
