--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,6 +288,21 @@ nav {
     display: block;
 }
 
+.subnav-searchbar, .subnav-searchbar input{
+    width: 100%;
+}
+
+.subnav-searchbar input{
+    border: none;
+    font-size: 2.5em;
+    padding: 25px 0;
+    outline: 0;
+}
+
+.subnav-searchbar input::placeholder{
+    color: var(--dark-grey);
+}
+
 /*Top Banner*/
 .top-banner {
     background-color: var(--red);
