--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,11 +61,16 @@ h3 {
 }
 
 h4 {
+    font-size: 1.25em;
     font-weight: 500;
 }
 
 div {
     display: block;
+}
+
+.page{
+    line-height: 24px;
 }
 
 .crossed {
@@ -341,6 +346,15 @@ nav {
 
 .number-products {
     color: var(--dark-grey);
+}
+
+/*Products*/
+.content-res-search{
+    text-align: center;
+}
+
+.content-res-search h4{
+    margin-bottom: 10px;
 }
 
 /*Product*/
